--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,24 @@
 
 influxdb_version: "2.4.0"
 
-influxdb_release_download_url: https://dl.influxdata.com/influxdb/releases
+influxdb_scm:
+  use_tags: false
+  without_beta: false
+  version_filter:
+    - ".*test*"
+    - ".*preview"
+    - ".*beta"
+    - ".*rc"
+
+influxdb_release: {}
+  # download_url: ""
+  # api_url: ""
+  # files:
+  #   influxdb: ""
+  #   influx_client: ""
+  # binaries:
+  #   influxd: ""
+  #   influx: ""
 
 influxdb_system_user: influxdb
 influxdb_system_group: influxdb
