--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -1,6 +1,6 @@
 ---
 
-name: latest influxdb
+name: update influxdb
 
 on:
   workflow_dispatch:
@@ -29,7 +29,7 @@ jobs:
         ansible-version:
           - '6.7'
         scenario:
-          - latest
+          - updates
 
     steps:
       - name: check out the codebase.
