--- a/.github/workflows/configured.yml
+++ b/.github/workflows/configured.yml
@@ -14,10 +14,15 @@ defaults:
   run:
     working-directory: 'ansible-influxdb'
 
+env:
+  PY_COLORS: '1'
+  ANSIBLE_FORCE_COLOR: '1'
+
 jobs:
-  deb:
-    name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
-    runs-on: ubuntu-20.04
+
+  debian:
+    name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}, python: ${{ matrix.python_version }}"
+    runs-on: ubuntu-22.04
     if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
     strategy:
       fail-fast: false
@@ -25,11 +30,12 @@ jobs:
         image:
           - debian:12
         python_version:
-          - "3.11.3"
+          - "3.10"
+          - "3.11"
         ansible-version:
-          - '6.7'
+          - '8.5'
         scenario:
-          - configured
+          - default
 
     steps:
       - name: check out the codebase.
@@ -48,6 +54,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r test-requirements.txt
 
+      - name: force reinstall of community.docker
+        run: |
+          mkdir -p /home/runner/.ansible/collections
+          ansible-galaxy collection install community.docker --force
+
       - name: test with tox
         run: |
           make \
@@ -59,3 +70,100 @@ jobs:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
           DISTRIBUTION: ${{ matrix.image }}
+
+  ubuntu:
+    name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}, python: ${{ matrix.python_version }}"
+    runs-on: ubuntu-22.04
+    needs:
+      - debian
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - ubuntu:22.04
+        python_version:
+          - "3.10"
+          - "3.11"
+        ansible-version:
+          - '8.5'
+        scenario:
+          - default
+
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v4
+        with:
+          path: 'ansible-influxdb'
+          ref: ${{ github.event.workflow_run.head_branch }}
+
+      - name: 🐍 set up python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.python_version }}"
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r test-requirements.txt
+
+      - name: force reinstall of community.docker
+        run: |
+          mkdir -p /home/runner/.ansible/collections
+          ansible-galaxy collection install community.docker --force
+
+      - name: test with tox
+        run: |
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
+
+  scenarios:
+    name: "${{ matrix.scenario }} / ansible: ${{ matrix.ansible-version }}, python: ${{ matrix.python_version }}"
+    runs-on: ubuntu-22.04
+    needs:
+      - debian
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - debian:12
+        python_version:
+          - "3.11"
+        ansible-version:
+          - '8.5'
+        scenario:
+          - configured
+          - updates
+          - latest
+
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v4
+        with:
+          path: 'ansible-influxdb'
+          ref: ${{ github.event.workflow_run.head_branch }}
+
+      - name: 🐍 set up python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.python_version }}"
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r test-requirements.txt
+
+      - name: force reinstall of community.docker
+        run: |
+          mkdir -p /home/runner/.ansible/collections
+          ansible-galaxy collection install community.docker --force
+
+      - name: test with tox
+        run: |
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
