--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -24,6 +24,7 @@
     - name: re-define influxdb_version
       ansible.builtin.set_fact:
         influxdb_version: "{{ _latest_release.latest_release }}"
+        # influxdb_download_url: "https://api.github.com/repos/influxdata/influxdb/tarball/v{{ _latest_release.latest_release }}"
 
 - name: define download information
   ansible.builtin.set_fact:
@@ -37,6 +38,25 @@
         default('/var/cache/ansible/influxdb', true) }}/{{ influxdb_version }}"
   when:
     - influxdb_direct_download
+
+- name: define influxdb_download_url
+  ansible.builtin.set_fact:
+    influxdb_download_url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influxdb }}"
+
+- name: define influxdb_client_download_url
+  ansible.builtin.set_fact:
+    influxdb_client_download_url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influx_client }}"
+
+- name: fix release filename for influxdb archive
+  #when:
+  #  - influxdb_version is version_compare('2.7.1', '>' )
+  ansible.builtin.set_fact:
+    influxdb_download_url: "{{ influxdb_download_url | influxdb_fix_release(influxdb_version, version='2.7.1') }}" # regex_replace('-linux-amd64', '_linux_amd64' ) }}"
+
+- name: fix release filename fonr influxdb-client archive
+  ansible.builtin.set_fact:
+    influxdb_client_download_url: "{{ influxdb_download_url | influxdb_fix_release(influxdb_version, version_list=['2.7.1']) }}"
+
 
 - name: create download directory
   become: false
@@ -73,7 +93,7 @@
       delegate_to: "{{ influxdb_delegate_to }}"
       run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
       ansible.builtin.get_url:
-        url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influxdb }}"
+        url: "{{ influxdb_download_url }}"
         dest: "{{ influxdb_local_tmp_directory }}/"
         mode: 0640
       register: _download_archive
@@ -87,7 +107,7 @@
       delegate_to: "{{ influxdb_delegate_to }}"
       run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
       ansible.builtin.get_url:
-        url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influx_client }}"
+        url: "{{ influxdb_client_download_url }}"
         dest: "{{ influxdb_local_tmp_directory }}/"
         mode: 0640
       register: _download_archive
