--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -19,6 +19,7 @@
         github_tags: "{{ influxdb_scm.use_tags | default('false') }}"
         without_beta: "{{ influxdb_scm.without_beta | default('false') }}"
         filter_elements: "{{ influxdb_scm.version_filter | default([]) }}"
+        cache: 320
       register: _latest_release
 
     - name: re-define influxdb_version
@@ -47,15 +48,16 @@
   #when:
   #  - influxdb_version is version_compare('2.7.1', '>' )
   ansible.builtin.set_fact:
-    influxdb_release: "{{ influxdb_release | influxdb_fix_release(influxdb_version, version='2.7.1') }}"
+    influxdb_release: "{{ influxdb_release | influxdb_fix_release(influxdb_version=influxdb_version, version='2.7.1') }}"
 
-- name: define influxdb_download_url
+- name: define download url for influxdb and influx-cli
   ansible.builtin.set_fact:
     influxdb_download_url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influxdb }}"
-
-- name: define influxdb_client_download_url
-  ansible.builtin.set_fact:
     influxdb_client_download_url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influx_client }}"
+
+# - name: define influxdb_client_download_url
+  # ansible.builtin.set_fact:
+    # influxdb_client_download_url: "{{ influxdb_release.download_url }}/{{ influxdb_release.files.influx_client }}"
 
 - name: d
   debug:
@@ -135,20 +137,60 @@
       ansible.builtin.fail:
         msg: A serious error occurred when downloading the archive.
 
-- name: detect extracted influxdb
+- name: find influx binaries
+  become: false
+  delegate_to: "{{ influxdb_delegate_to }}"
+  run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
+  ansible.builtin.find:
+    paths: "{{ influxdb_local_tmp_directory }}"
+    file_type: file
+    use_regex: yes
+    patterns:
+      - "^{{ influxdb_release.binaries.influxd }}$"
+      - "^{{ influxdb_release.binaries.influx }}$"
+    recurse: true
+  register: found_influx_binaries
+
+- name: d
+  debug:
+    msg: "{{ found_influx_binaries }}"
+
+- name: define influx_binaries
+  ansible.builtin.set_fact:
+    # influx_binaries: "{{ found_influx_binaries.files | sort(attribute='path', reverse=True) | map(attribute='path') | list }}"
+    influx_binaries: "{{ found_influx_binaries.files | influx_binaries() }}"
+  when:
+    - found_influx_binaries.files is defined
+    - found_influx_binaries.files | count > 0
+
+- name: detect extracted influxdb ({{ influxdb_local_tmp_directory }}/{{ influxdb_release.binaries.influxd }})
   become: false
   delegate_to: "{{ influxdb_delegate_to }}"
   run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
   ansible.builtin.stat:
-    path: "{{ influxdb_local_tmp_directory }}/{{ influxdb_release.binaries.influxd }}"
+    path: "{{ influx_binaries[influxdb_release.binaries.influxd] }}"
   register: stat_influxdb_binary
+
+- name: detect extracted influx-client ({{ influxdb_local_tmp_directory }}/{{ influxdb_release.binaries.influx }})
+  become: false
+  delegate_to: "{{ influxdb_delegate_to }}"
+  run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
+  ansible.builtin.stat:
+    path: "{{ influx_binaries[influxdb_release.binaries.influx] }}"
+  register: stat_influx_client_binary
+
+- name: d
+  debug:
+    msg:
+      - "{{ influxdb_release.binaries.influxd }}"
+      - "{{ influx_binaries | default({}) }}"
 
 - name: extract influxdb archiv
   become: false
   delegate_to: "{{ influxdb_delegate_to }}"
   run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
   ansible.builtin.unarchive:
-    src: "{{ influxdb_local_tmp_directory }}/{{ influxdb_release.files.influxdb }}"
+    src: "{{ influx_binaries[influxdb_release.binaries.influxd] }}"
     dest: "{{ influxdb_local_tmp_directory }}/"
     copy: false
     extra_opts:
@@ -157,20 +199,12 @@
     - stat_influxdb_binary.stat is defined
     - not stat_influxdb_binary.stat.exists | default('false')
 
-- name: detect extracted influx-client
-  become: false
-  delegate_to: "{{ influxdb_delegate_to }}"
-  run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
-  ansible.builtin.stat:
-    path: "{{ influxdb_local_tmp_directory }}/{{ influxdb_release.binaries.influx }}"
-  register: stat_influx_client_binary
-
 - name: extract influx-client archiv
   become: false
   delegate_to: "{{ influxdb_delegate_to }}"
   run_once: "{{ 'false' if influxdb_direct_download else 'true' }}"
   ansible.builtin.unarchive:
-    src: "{{ influxdb_local_tmp_directory }}/{{ influxdb_release.files.influx_client }}"
+    src: "{{ influx_binaries[influxdb_release.binaries.influx] }}"
     dest: "{{ influxdb_local_tmp_directory }}/"
     copy: false
     extra_opts:
