--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,6 +6,10 @@ influxdb_bin_version: "influxdb{{ influxdb_main_version if influxdb_main_version
 
 influxdb_install_path: /opt/influxdb/{{ influxdb_version }}
 
+influxdb_install_paths:
+  influxd: /opt/influxd/{{ influxdb_version }}
+  influx: /opt/influx/{{ influxdb_cli_version }}
+
 influxdb_delegate_to: localhost
 
 influxdb_local_tmp_directory: "{{
@@ -161,7 +165,7 @@ influxdb_defaults_release:
   api_url: ""
   files:
     influxdb: "{{ influxdb_bin_version }}-{{ influxdb_version }}-{{ ansible_facts.system | lower }}-{{ system_architecture }}.tar.gz"
-    influx_client: "{{ influxdb_bin_version }}-client-{{ influxdb_version }}-{{ ansible_facts.system | lower }}-{{ system_architecture }}.tar.gz"
+    influx_client: "{{ influxdb_bin_version }}-client-{{ influxdb_cli_version }}-{{ ansible_facts.system | lower }}-{{ system_architecture }}.tar.gz"
   binaries:
     influxd: "influxd"
     influx: "influx"
