updates for influxdb > 2.7.1
seperate installation of influxd and influx

--- a/.github/workflows/configured.yml
+++ b/.github/workflows/configured.yml
@@ -136,7 +136,7 @@ jobs:
         scenario:
           - configured
           - updates
-          # - latest
+          - latest
 
     steps:
       - name: check out the codebase.
