--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -22,11 +22,14 @@
 
 - name: create install directory
   ansible.builtin.file:
-    path: "{{ influxdb_install_path }}"
+    path: "{{ item }}"
     state: directory
     owner: "{{ influxdb_system_user }}"
     group: "{{ influxdb_system_group }}"
-    mode: 0755
+    mode: "0755"
+  loop:
+    - "{{ influxdb_install_paths.influxd }}"
+    - "{{ influxdb_install_paths.influx }}"
 
 - name: find influx binaries
   become: false
@@ -71,17 +74,15 @@
   when:
     - influx_binaries[influxdb_release.binaries.influxd] | default("") | string | length == 0 or
       influx_binaries[influxdb_release.binaries.influx] | default("") | string | length == 0
-    #- not stat_influxdb_file_binary.stat.exists or
-    #  not stat_influx_client_file_binary.stat.exists
 
 - name: detect installed influxdb binary
   ansible.builtin.stat:
-    path: "{{ influxdb_install_path }}/influxd"
+    path: "{{ influxdb_install_paths.influxd }}/influxd"
   register: stat_influxdb_binary
 
 - name: detect installed influx-client binary
   ansible.builtin.stat:
-    path: "{{ influxdb_install_path }}/influx"
+    path: "{{ influxdb_install_paths.influx }}/influx"
   register: stat_influx_client_binary
 
 - name: detect activated influxdb binary
@@ -97,55 +98,57 @@
 - name: install and activate influx
   when:
     - (stat_influxdb_binary.stat is defined and not stat_influxdb_binary.stat.exists | default('false')) or
-      not stat_influxdb_activated.stat | bodsch.core.linked_version(influxdb_install_path, influxdb_version) or
+      not stat_influxdb_activated.stat | bodsch.core.linked_version(influxdb_install_paths.influxd, influxdb_version) or
       (stat_influx_client_binary.stat is defined and not stat_influx_client_binary.stat.exists | default('false')) or
-      not stat_influx_client_activated.stat | bodsch.core.linked_version(influxdb_install_path, influxdb_version)
+      not stat_influx_client_activated.stat | bodsch.core.linked_version(influxdb_install_paths.influx, influxdb_cli_version)
   block:
+    # indluxd
     - name: propagate influxd binary
       ansible.builtin.copy:
         # src: "{{ influxdb_local_tmp_directory }}/{{ influxdb_release.binaries.influxd }}"
         src: "{{ influx_binaries[influxdb_release.binaries.influxd] }}"
-        dest: "{{ influxdb_install_path }}/influxd"
-        mode: 0755
+        dest: "{{ influxdb_install_paths.influxd }}/influxd"
+        mode: "0755"
         owner: "{{ influxdb_system_user }}"
         group: "{{ influxdb_system_group }}"
         remote_src: "{{ 'true' if influxdb_direct_download else 'false' }}"
 
     - name: make sure influxd is executable
       ansible.builtin.file:
-        path: "{{ influxdb_install_path }}/influxd"
-        mode: 0755
+        path: "{{ influxdb_install_paths.influxd }}/influxd"
+        mode: "0755"
         owner: "{{ influxdb_system_user }}"
         group: "{{ influxdb_system_group }}"
 
     - name: create link to influxd binary
       ansible.builtin.file:
-        src: "{{ influxdb_install_path }}/influxd"
+        src: "{{ influxdb_install_paths.influxd }}/influxd"
         dest: /usr/bin/influxd
         state: link
         force: true
       notify:
         - restart service
 
+    # influx (cli tool)
     - name: propagate influx binary
       ansible.builtin.copy:
         src: "{{ influx_binaries[influxdb_release.binaries.influx] }}"
-        dest: "{{ influxdb_install_path }}/influx"
-        mode: 0755
+        dest: "{{ influxdb_install_paths.influx }}/influx"
+        mode: "0755"
         owner: "{{ influxdb_system_user }}"
         group: "{{ influxdb_system_group }}"
         remote_src: "{{ 'true' if influxdb_direct_download else 'false' }}"
 
     - name: make sure influx is executable
       ansible.builtin.file:
-        path: "{{ influxdb_install_path }}/influx"
-        mode: 0755
+        path: "{{ influxdb_install_paths.influx }}/influx"
+        mode: "0755"
         owner: "{{ influxdb_system_user }}"
         group: "{{ influxdb_system_group }}"
 
     - name: create link to influx binary
       ansible.builtin.file:
-        src: "{{ influxdb_install_path }}/influx"
+        src: "{{ influxdb_install_paths.influx }}/influx"
         dest: /usr/bin/influx
         state: link
         force: true
@@ -153,8 +156,11 @@
   rescue:
     - name: delete install directory
       ansible.builtin.file:
-        path: "{{ influxdb_install_path }}"
+        path: "{{ item }}"
         state: absent
+      loop:
+        - influxdb_install_paths.influxd
+        - influxdb_install_paths.influx
 
     - name: exit with fail
       ansible.builtin.fail:
@@ -166,7 +172,7 @@
     state: directory
     owner: "{{ influxdb_system_user }}"
     group: "{{ influxdb_system_group }}"
-    mode: 0755
+    mode: "0755"
   loop:
     - "{{ influxdb_storage_dir }}"
     - "{{ influxdb_storage_dir }}/meta"
@@ -185,7 +191,7 @@
         force: true
         owner: root
         group: "{{ influxdb_system_group }}"
-        mode: 0640
+        mode: "0640"
       notify:
         # - validate config
         - restart service
@@ -196,7 +202,7 @@
         dest: "{{ systemd_lib_directory }}/influxdb.service"
         owner: root
         group: root
-        mode: 0644
+        mode: "0644"
       notify:
         - systemd daemon reload
         - restart service
@@ -211,7 +217,7 @@
         dest: "/etc/conf.d/influxdb"
         owner: root
         group: root
-        mode: 0644
+        mode: "0644"
 
     - name: create openrc init configuration
       ansible.builtin.template:
@@ -219,7 +225,7 @@
         dest: "/etc/init.d/influxdb"
         owner: root
         group: root
-        mode: 0750
+        mode: "0750"
 
 - name: create custom fact file
   bodsch.core.facts:
