fix test for artixlinux

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 
 galaxy_info:
   role_name: influxdb
+  namespace: bodsch
 
   author: Bodo Schulz
   description: Install and configures InfluxDB2
