--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -4,11 +4,15 @@ name: push to ansible galaxy
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - '*'
+    paths:
+      - "!README.md"
+      - '.github/workflows/release.yml'
   workflow_run:
     workflows:
       - "CI"
-    branches:
-      - main
     types:
       - completed
 
@@ -16,7 +20,7 @@ jobs:
   galaxy:
     name: galaxy
     runs-on: ubuntu-22.04
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && startsWith(github.ref, 'refs/tags/') }}
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v4
