--- a/.github/workflows/configured.yml
+++ b/.github/workflows/configured.yml
@@ -29,11 +29,10 @@ jobs:
       matrix:
         image:
           - debian:12
-        python_version:
-          - "3.10"
-          - "3.11"
         ansible-version:
-          - '8.5'
+          - '9.5'
+        python_version:
+          - '3.12'
         scenario:
           - default
 
@@ -81,11 +80,11 @@ jobs:
       matrix:
         image:
           - ubuntu:22.04
-        python_version:
-          - "3.10"
-          - "3.11"
+          - ubuntu:24.04
         ansible-version:
-          - '8.5'
+          - '9.5'
+        python_version:
+          - '3.12'
         scenario:
           - default
 
@@ -129,10 +128,10 @@ jobs:
       matrix:
         image:
           - debian:12
-        python_version:
-          - "3.11"
         ansible-version:
-          - '8.5'
+          - '9.5'
+        python_version:
+          - '3.12'
         scenario:
           - configured
           - updates
@@ -154,6 +153,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r test-requirements.txt
+
+      - name: Install system packages
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y python3-dateutil
 
       - name: force reinstall of community.docker
         run: |
